Added new things

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": ""
+  },
+  "Jwt": {
+    "Key": "98765432@@#$%^&*asdhagjsdgajshgd987asjkdhakjshda-asdjhkjh",
+    "Issuer": "http://localhost:8080", 
+    "Audience": "http://localhost:5000",
+    "ExpiryMinutes": 120
   }
 }
