Feature: Add compliance, telemetry, logging support, and update configuration for Seq
- Added `Microsoft.Extensions.Compliance`, `Telemetry`, and `Diagnostics` package references in WebApi, Domain, and Infrastructure projects.
- Introduced Seq logging configuration in `appsettings.json` and `appsettings.Development.json`.
- Implemented HTTP logging, activity tracing, and custom `HttpLoggingFields` in WebApi's Program.cs.
- Extended Docker Compose setup to include Seq service.
- Updated `AuditLogProcessor` to use scoped services.
- Created `DataTaxonomy` in Domain for data classification.
- Added comprehensive README with project setup and structure information.

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,6 +4,14 @@
       context: Database
     ports:
       - 5432:5432
+  seq:
+    image: datalust/seq
+    ports:
+      - 8081:80
+      - 5341:5341
+    environment:
+      ACCEPT_EULA: Y
+      SEQ_FIRSTRUN_NOAUTHENTICATION: true
   webapi:
     image: webapi
     build:
@@ -13,4 +21,6 @@
       - 8080:8080
     environment:
       ConnectionStrings__DefaultConnection: "Host=database;User Id=postgres;Password=password;Database=postgres;"
+      Seq__ServerUrl: "http://seq:5341"
+      ASPNETCORE_ENVIRONMENT: Development
 
