--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Compliance.Abstractions" Version="9.9.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.9" />
     </ItemGroup>
 
