--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -9,6 +9,9 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Compliance.Redaction" Version="9.9.0" />
+        <PackageReference Include="Microsoft.Extensions.Diagnostics.Abstractions" Version="9.0.9" />
+        <PackageReference Include="Microsoft.Extensions.Telemetry" Version="9.9.0" />
     </ItemGroup>
 
     <ItemGroup>
