--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,6 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Seq": {
+    "ServerUrl": "http://localhost:5341",
+    "MinimumLevel": "Trace",
+    "LevelOverride": {
+      "Microsoft": "Warning"
+    },
+    "Hmac": {
+      "key": "",
+      "keyId": ""
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": ""
